# HMS-A2A

./: AGENCY_INTEGRATION_README.md  IMPORT_GUIDELINES.md  MIGRATION-PLAN.md  PROVER-INTEGRATION-PLAN.md  README.md  cleanup_migration.py  econ.data  reorganize_folders.py  run_lean_tests.sh  start.py  start.sh  start_cort_demo.sh
HMS-A2A/: 01_ai_agents_module__hms_a2a__.md  01_user_portal___citizen_interface_.md  02_government_admin_portal__hms_gov__.md  03_intent_driven_navigation_.md  04_human_in_the_loop__hitl__oversight_.md  04_micro_frontend_library__hms_mfe__.md  05_administration_portal__hms_gov__.md  05_ai_representative_agent_.md  05_policy___process_module_.md  06_backend_api_gateway_.md  06_human_decision_maker__hitl__.md  07_inter_agency_exchange_protocol__hms_a2a__.md  07_shared_frontend_component_library_.md  08_microservices___service_mesh_architecture_.md  09_management_layer_.md  10_ai_governance_layer__transparency__ethics__safety__privacy__.md  10_human_in_the_loop_oversight_.md  11_backend_services__hms_svc_hms_api__.md  12_autonomous_performance___replacement_logic_.md  12_core_infrastructure__hms_sys__.md  12_human_in_the_loop_control_loop_.md  14_three_layer_architecture_.md  15_compliance___legal_reasoning__hms_esq__.md  API.md  CHANGELOG.md  HMS-A2A-API-SPECIFICATION.md  HMS-A2A-COMMUNICATION-PLAN.md  HMS-A2A-DATA-MODEL-MAPPING.md  SECURITY.md  SETUP.md  cort_economic_integration.md  economic_theory_mathematics.md  market_network_trade_balance.md  mcp_langchain.md  moneyball_model_specifications.md  optimized_trade_balance_implementation_plan.md
HMS-A2A/HMS-docs/: CLAUDE.md  DEVELOPMENT.md  (+11 more)
data/: economic_domain_model.json  moneyball_formal_specifications.json  unified_economic_model.json
deployment/: __init__.py
scripts/: cleanup_unused_orig.py  execute_migration.sh  migrate_structure_orig.py  update_doc_references.py
src/agency-implementation/templates/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/agency-implementation/templates/config/: agency.json  hms-api-spec.yaml
src/agency-implementation/templates/docs/customization/: CUSTOMIZATION_GUIDE.md
src/agency-implementation/templates/docs/integration/: HMS_INTEGRATION.md
src/agency-implementation/templates/docs/setup/: GETTING_STARTED.md
src/agency-implementation/templates/src/: main.rs
src/agency-implementation/templates/src/api/: AgencyController.rs
src/agency-implementation/templates/src/integrations/: HmsApiIntegration.rs
src/agency-implementation/templates/src/models/: AgencyEntity.rs
src/agency-implementation/templates/src/services/: AgencyService.rs
src/agency-implementation/templates/tests/: agency_integration_test.rs
src/crohns-treatment-system/src/coordination/genetic-engine/: Cargo.toml  core.rs  crohns_integration.rs  enhanced_genetic_engine.py  ffi.rs  ffi_sequence.rs  genetic_sequence_analyzer.rs  lib.rs  representation.rs
src/crohns-treatment-system/src/coordination/genetic-engine/src/: ffi.rs  lib.rs
src/domains/verification/prover/: Cargo.toml
src/domains/verification/prover/src/: main.rs
utils/: theorem_exporter.py
(+1830 files in other folders)
