[package]
name = "hms-agency-template"
version = "0.1.0"
edition = "2021"
description = "HMS Agency Implementation Template"
authors = ["HMS Development Team <contact@example.com>"]

# Replace with your agency information when creating a new implementation
# name = "hms-<agency-code>"
# description = "HMS Agency Implementation for <Agency Name>"
# authors = ["<Agency> Development Team <contact@example.com>"]

[dependencies]
# HTTP server and routing
warp = "0.3"
hyper = { version = "0.14", features = ["full"] }

# Async runtime
tokio = { version = "1.26", features = ["full"] }
async-trait = "0.1"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

# Testing
mockito = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
mock = []
integration_tests = []

# Add any agency-specific features here
# Example: 
# advanced_processing = []
# external_integrations = []