[package]
name = "genetic_engine"
version = "0.1.0"
edition = "2021"
authors = ["Crohn's Treatment System Team"]
description = "Genetic algorithm engine for optimizing Crohn's disease treatments"
readme = "README.md"

[lib]
name = "genetic_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
log = "0.4.20"
env_logger = "0.10.0"

# FFI dependencies
pyo3 = { version = "0.20.0", features = ["extension-module", "serde"] }
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }

# Clinical domain dependencies
chrono = { version = "0.4.31", features = ["serde"] }
statrs = "0.16.0"
ndarray = "0.15.6"
petgraph = "0.6.4"

[dev-dependencies]
criterion = "0.5.1"
mockall = "0.11.4"
test-case = "3.3.1"
tempfile = "3.8.1"

[features]
default = ["pyo3/extension-module"]
python = ["pyo3/extension-module"]
wasm = ["wasm-bindgen/serde-serialize"]
parallel = ["rayon"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "genetic_algorithm"
harness = false